--- a/my-sonzaify/src/componets/tracks.css
+++ b/my-sonzaify/src/componets/tracks.css
@@ -6,6 +6,7 @@
   overflow-y: auto;
   width: 100%;
   max-width: 400px;
+  margin: 0 20px;
 }
 
 .track-item {
